# cppnology

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/cppnology/: Attributes.h  CprSerializer.h  Instance.h  QuickConnect.h  Request.h
include/cppnology/API/Auth/: login.h
include/cppnology/API/Info/: query.h
include/cppnology/exception/: CppnologyException.h
src/: CppnologyException.cpp  Instance.cpp  QuickConnect.cpp
